; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_decompress.c_file_decompressed.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_decompress.c_file_decompressed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.archive_extract_userdata = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8*, i32 }

@PATH_MAX_LENGTH = common dso_local global i32 0, align 4
@CALLBACK_ERROR_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Failed to deflate %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32*, i32, i32, i32, i32, %struct.archive_extract_userdata*)* @file_decompressed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @file_decompressed(i8* %0, i8* %1, i32* %2, i32 %3, i32 %4, i32 %5, i32 %6, %struct.archive_extract_userdata* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.archive_extract_userdata*, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i64, align 8
  %20 = alloca %struct.TYPE_2__*, align 8
  %21 = alloca i64, align 8
  %22 = alloca i8, align 1
  %23 = alloca i32, align 4
  store i8* %0, i8** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store %struct.archive_extract_userdata* %7, %struct.archive_extract_userdata** %17, align 8
  %24 = load i32, i32* @PATH_MAX_LENGTH, align 4
  %25 = zext i32 %24 to i64
  %26 = call i8* @llvm.stacksave()
  store i8* %26, i8** %18, align 8
  %27 = alloca i8, i64 %25, align 16
  store i64 %25, i64* %19, align 8
  %28 = load %struct.archive_extract_userdata*, %struct.archive_extract_userdata** %17, align 8
  %29 = getelementptr inbounds %struct.archive_extract_userdata, %struct.archive_extract_userdata* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  store %struct.TYPE_2__* %30, %struct.TYPE_2__** %20, align 8
  %31 = load i8*, i8** %10, align 8
  %32 = call i64 @strlen(i8* %31)
  store i64 %32, i64* %21, align 8
  %33 = load i8*, i8** %10, align 8
  %34 = load i64, i64* %21, align 8
  %35 = sub i64 %34, 1
  %36 = getelementptr inbounds i8, i8* %33, i64 %35
  %37 = load i8, i8* %36, align 1
  store i8 %37, i8* %22, align 1
  %38 = getelementptr inbounds i8, i8* %27, i64 0
  store i8 0, i8* %38, align 16
  %39 = load i8, i8* %22, align 1
  %40 = sext i8 %39 to i32
  %41 = icmp eq i32 %40, 47
  br i1 %41, label %46, label %42

42:                                               ; preds = %8
  %43 = load i8, i8* %22, align 1
  %44 = sext i8 %43 to i32
  %45 = icmp eq i32 %44, 92
  br i1 %45, label %46, label %47

46:                                               ; preds = %42, %8
  store i32 1, i32* %9, align 4
  store i32 1, i32* %23, align 4
  br label %87

47:                                               ; preds = %42
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 8
  %51 = load i8*, i8** %10, align 8
  %52 = trunc i64 %25 to i32
  %53 = call i32 @fill_pathname_join(i8* %27, i32 %50, i8* %51, i32 %52)
  %54 = call i32 @path_basedir_wrapper(i8* %27)
  %55 = call i32 @path_mkdir(i8* %27)
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %58, label %57

57:                                               ; preds = %47
  br label %76

58:                                               ; preds = %47
  %59 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %60 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 8
  %62 = load i8*, i8** %10, align 8
  %63 = trunc i64 %25 to i32
  %64 = call i32 @fill_pathname_join(i8* %27, i32 %61, i8* %62, i32 %63)
  %65 = load i8*, i8** %11, align 8
  %66 = load i32*, i32** %12, align 8
  %67 = load i32, i32* %13, align 4
  %68 = load i32, i32* %14, align 4
  %69 = load i32, i32* %15, align 4
  %70 = load i32, i32* %16, align 4
  %71 = load %struct.archive_extract_userdata*, %struct.archive_extract_userdata** %17, align 8
  %72 = call i32 @file_archive_perform_mode(i8* %27, i8* %65, i32* %66, i32 %67, i32 %68, i32 %69, i32 %70, %struct.archive_extract_userdata* %71)
  %73 = icmp ne i32 %72, 0
  br i1 %73, label %75, label %74

74:                                               ; preds = %58
  br label %76

75:                                               ; preds = %58
  store i32 1, i32* %9, align 4
  store i32 1, i32* %23, align 4
  br label %87

76:                                               ; preds = %74, %57
  %77 = load i32, i32* @CALLBACK_ERROR_SIZE, align 4
  %78 = call i64 @malloc(i32 %77)
  %79 = inttoptr i64 %78 to i8*
  %80 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %81 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %80, i32 0, i32 0
  store i8* %79, i8** %81, align 8
  %82 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %83 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %82, i32 0, i32 0
  %84 = load i8*, i8** %83, align 8
  %85 = load i32, i32* @CALLBACK_ERROR_SIZE, align 4
  %86 = call i32 @snprintf(i8* %84, i32 %85, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %27)
  store i32 0, i32* %9, align 4
  store i32 1, i32* %23, align 4
  br label %87

87:                                               ; preds = %76, %75, %46
  %88 = load i8*, i8** %18, align 8
  call void @llvm.stackrestore(i8* %88)
  %89 = load i32, i32* %9, align 4
  ret i32 %89
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @strlen(i8*) #2

declare dso_local i32 @fill_pathname_join(i8*, i32, i8*, i32) #2

declare dso_local i32 @path_basedir_wrapper(i8*) #2

declare dso_local i32 @path_mkdir(i8*) #2

declare dso_local i32 @file_archive_perform_mode(i8*, i8*, i32*, i32, i32, i32, i32, %struct.archive_extract_userdata*) #2

declare dso_local i64 @malloc(i32) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
